platform/phase-3-raw-YML/gateway-api/httproute.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: api-route
  namespace: webhook-task-pipeline
spec:
  parentRefs:
    - name: main-gateway
  rules:
    - matches:
      - path:
          type: PathPrefix
          value: /api/v1
      backendRefs:
        - name: api
          port: 80
